--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -21,16 +21,19 @@
 		<div class="background gray">
 			<div class="container with-padding">
 				<p>
-					I love interfaces and products that bring joy as well as functionality to people’s lives. I have an endless passion for all things beautiful and user friendly, and want to build products that make the world more magical. 
+					I love interfaces that bring joy as well as functionality to people’s lives. I have an endless passion for all things beautiful and user friendly, and want to build products that make the world more magical. 
 				</p>
 				<p>
 					Basically, I like to make nice things. 
 				</p>
 				<p>
-					I’m currently a junior studying computer science and design at UC Berkeley. I was born in India, but raised in Chicago, so I like bollywood music, black tea with milk and sugar, and seasons. In my spare time, I listen to books, better myself by going to museums and reading The Economist, and draw pictures. I also try to travel and eat as much tasty food as possible. Sometimes, if I’m feeling adventurous, I even make food. It’s usually less tasty though.
+					I’m currently a junior studying computer science and design at UC Berkeley. In my spare time I listen to books, drink tea, and draw pictures. I also like to travel and eat as much tasty food as possible. Sometimes, if I’m feeling adventurous, I even make food. It’s usually less tasty though.
 				</p>
 				<p>
-					You can read my thoughts on audiobooks on <a href="#">Medium</a>, or see my artsy fartsy photos on <a href="#">Instagram</a>. Or scroll down to see some pictures of my face!
+					You can read my thoughts on audiobooks on <a href="#">Medium</a>, or see my artsy fartsy photos on <a href="#">Instagram</a>. Or scroll down to see my resume!
+				</p>
+				<p>
+					<i>(To download a PDF version of my resume, click <a href="#">here)</a></i>
 				</p>
 				<span class="button-span">
 					<a class="button button-gray" href="#">Dribbble</a>
@@ -42,13 +45,25 @@
 		</div>
 		<!-- Photos -->
 		<div class="background photos">
-			<div class="square yellow">
+			<div class="square bookshelves">
+				<div class="overlay yellow">
+					&nbsp;
+				</div>
 			</div>
-			<div class="square light-yellow">
+			<div class="square glasses">
+				<div class="overlay light-yellow">
+					&nbsp;
+				</div>
 			</div>
-			<div class="square light-blue">
+			<div class="square grass">
+				<div class="overlay light-blue">
+					&nbsp;
+				</div>
 			</div>
-			<div class="square blue">
+			<div class="square sea">
+				<div class="overlay blue">
+					&nbsp;
+				</div>
 			</div>
 		</div>
 		<!-- Resume -->
@@ -60,24 +75,21 @@
 					<h1> Education </h1>
 
 					<h3>University of California, Berkeley</h3>
-					<p class="no-top-margin">
+					<p class="resume-item">
 						Bachelor of Arts, Computer Science
 						<br>GPA: 3.6
 					</p>
-				</div>
-				<!-- Experience -->
-				<div class="content">
 					<h1> Work Experience </h1>
 
 					<h3>Shapeways (Summer 2015)</h3>
 					<h4>UI/Front-end Engineering Intern</h4>
-					<p class="no-top-margin">
+					<p class="resume-item">
 						Designed and built user facing features at a New York based 3D Printing service and marketplace and participated in front-end architectural refactor projects.
 					</p>
 
 					<h3>The WONDER Foundation (Spring 2015)</h3>
 					<h4>Communication Design Intern</h4>
-					<p class="no-top-margin no-bottom-margin">
+					<p class="resume-item no-bottom-margin">
 						Designed branding and marketing materials for a London based non-profit organization during my semester abroad.
 					</p>
 				</div>
@@ -110,18 +122,18 @@
 
 					<h3>Introduction to Photoshop & Illustrator</h3>
 					<h4>Course Instructor</h4>
-					<p class="no-top-margin">
+					<p class="resume-item">
 						Currently designing curriculum and teaching an introductory course on the Adobe Creative Suite to students at UC Berkeley
 					</p>
 
 					<h3>Innovative Design</h3>
 					<h4>Team Leader</h4>
-					<p class="no-top-margin">
+					<p class="resume-item">
 						Mentored and managed a team of beginner to intermediate graphic designers on various pro-bono marketing and branding projects.
 					</p>
 
 					<h4>External Relations & Community Outreach Officer</h4>
-					<p class="no-top-margin">
+					<p class="resume-item">
 						Organized campus events and workshops centered on design education and technology for social change. 
 					</p>
 				</div>
