--- a/new-site/index.html
+++ b/new-site/index.html
@@ -36,11 +36,14 @@
 				<!-- Shapeways -->
 				<div class="content first-item">
 					<!-- Image -->
-					<div class="overlay yellow">
+					<div class="photo shapeways">
+						<div class="overlay yellow">
+							&nbsp;
+						</div>
 					</div>
 					<!-- Title -->
 					<h1>Shapeways</h1>
-					<h4>UI / Front-end Engineering</h4>
+					<h4>UI / Front-end Engineering Intern</h4>
 					<p>
 						<a href="#">Photo</a> booth authentic cornhole, typewriter viral direct trade Marfa pop-up cred cronut cliche literally. Health goth tilde slow-carb messenger bag. Lo-fi kogi dreamcatcher, squid post-ironic pickled stumptown. Biodiesel disrupt wayfarers skateboard Banksy keytar.
 					</p>
@@ -58,7 +61,10 @@
 				<!-- WONDER -->
 				<div class="content">
 					<!-- Image -->
-					<div class="overlay light-yellow">
+					<div class="photo wonder">
+						<div class="overlay light-yellow">
+							&nbsp;
+						</div>
 					</div>
 					<!-- Title -->
 					<h1>The Wonder Foundation</h1>
@@ -79,7 +85,10 @@
 				<!-- InnoD -->
 				<div class="content">
 					<!-- Image -->
-					<div class="overlay light-blue">
+					<div class="photo innod">
+						<div class="overlay light-blue">
+							&nbsp;
+						</div>
 					</div>
 					<!-- Title -->
 					<h1>Innovative Design</h1>
@@ -99,7 +108,10 @@
 				</div>
 				<div class="content">
 					<!-- Image -->
-					<div class="overlay blue">
+					<div class="photo other">
+						<div class="overlay blue">
+							&nbsp;
+						</div>
 					</div>
 					<!-- Title -->
 					<h1>Other Projects</h1>
