adding innod and wonder

--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -12,35 +12,10 @@
 	</head>
 	<body>
 		<!-- Header -->
-		<div class="header background pink">
-			<div class="blurb">
-				<h1> My full name is Angira Shirahatti. </h1>
-			</div>
-		</div>
-		<!-- Paragraph -->
-		<div class="background gray">
-			<div class="container with-padding">
-				<p>
-					I love interfaces that bring joy as well as functionality to people’s lives. I have an endless passion for all things beautiful and user friendly, and want to build products that make the world more magical. 
-				</p>
-				<p>
-					Basically, I like to make nice things. 
-				</p>
-				<p>
-					I’m currently a junior studying computer science and design at UC Berkeley. In my spare time I listen to books, drink tea, and draw pictures. I also like to travel and eat as much tasty food as possible. Sometimes, if I’m feeling adventurous, I even make food. It’s usually less tasty though.
-				</p>
-				<p>
-					You can read my thoughts on audiobooks on <a href="#">Medium</a>, or see my artsy fartsy photos on <a href="#">Instagram</a>. Or scroll down to see my resume!
-				</p>
-				<p>
-					<i>(To download a PDF version of my resume, click <a href="#">here)</a></i>
-				</p>
-				<span class="button-span">
-					<a class="button button-gray" href="#">Dribbble</a>
-				</span>
-				<span class="button-span">
-					<a class="button button-gray" href="#">Github</a>
-				</span>
+		<div class="header background yellow">
+			<div class="title">
+				<h1> My full name is Angira Shirahatti</h1>
+				<p> Here are some pictures of me!</p>
 			</div>
 		</div>
 		<!-- Photos -->
@@ -66,12 +41,37 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- Paragraph -->
+		<div class="background gray">
+			<div class="clearfix">&nbsp;</div>
+			<div class="container with-padding">
+				<p>
+					I love interfaces that bring joy as well as functionality to people’s lives. I have an endless passion for all things beautiful and user friendly, and want to build products that make the world more magical. 
+				</p>
+				<p>
+					<strong>Basically, I like to make nice things.</strong>
+				</p>
+				<p>
+					In my spare time I listen to books, drink tea, and draw pictures. I also like to travel and eat as much tasty food as possible. Sometimes, if I’m feeling adventurous, I even make food. It’s usually less tasty though.
+				</p>
+				<p>
+					You can read my thoughts on audiobooks on <a href="https://medium.com/@ashirahatti" target="_blank">Medium</a>, or see my artsy photos on <a href="https://instagram.com/ashirahattia" target="_blank">Instagram</a>. Or scroll down to see my resume!
+				</p>
+				<p>
+					<i>(Photos by <a href="http://andiebiggs.22slides.com/" target="_blank">Andie Biggs</a>)</i>
+				</p>
+			</div>
+		</div>
 		<!-- Resume -->
 		<div class="background white">
 			<div class="container">
 				<div class="clearfix">&nbsp;</div>
 				<!-- Education -->
 				<div class="content">
+					<span class="button-span">
+						<a class="button button-gray" href="#">Resume PDF</a>
+					</span>
 					<h1> Education </h1>
 
 					<h3>University of California, Berkeley</h3>
@@ -82,14 +82,14 @@
 					<h1> Work Experience </h1>
 
 					<h3>Shapeways (Summer 2015)</h3>
-					<h4>UI/Front-end Engineering Intern</h4>
+					<h5>UI/Front-end Engineering Intern</h5>
 					<p class="resume-item">
 						Designed and built user facing features at a New York based 3D Printing service and marketplace and participated in front-end architectural refactor projects.
 					</p>
 
 					<h3>The WONDER Foundation (Spring 2015)</h3>
-					<h4>Communication Design Intern</h4>
-					<p class="resume-item no-bottom-margin">
+					<h5>Communication Design Intern</h5>
+					<p class="resume-item">
 						Designed branding and marketing materials for a London based non-profit organization during my semester abroad.
 					</p>
 				</div>
@@ -121,18 +121,18 @@
 					<h1>Teaching & Leadership</h1>
 
 					<h3>Introduction to Photoshop & Illustrator</h3>
-					<h4>Course Instructor</h4>
+					<h5>Course Instructor</h5>
 					<p class="resume-item">
 						Currently designing curriculum and teaching an introductory course on the Adobe Creative Suite to students at UC Berkeley
 					</p>
 
 					<h3>Innovative Design</h3>
-					<h4>Team Leader</h4>
+					<h5>Team Leader</h5>
 					<p class="resume-item">
 						Mentored and managed a team of beginner to intermediate graphic designers on various pro-bono marketing and branding projects.
 					</p>
 
-					<h4>External Relations & Community Outreach Officer</h4>
+					<h5>External Relations & Community Outreach Officer</h5>
 					<p class="resume-item">
 						Organized campus events and workshops centered on design education and technology for social change. 
 					</p>
@@ -151,13 +151,38 @@
 		</div>
 		<!-- Footer -->
 		<div class="background gray footer">
-			<div class="container">
+			<div class="footer">
+				<a href="#">
+					<img class="social-media" src="../footer/dribbble.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/github.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/behance.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/linkedin.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/medium.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/instagram.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/email.png">
+				</a>
+				<div class="content">
+					Found a bug? <a href="#">Call the exterminator</a>
+				</div>
 			</div>
+
 		</div>
 		<!-- Menu Link -->
-		<div class="menu-link-div pink">
+		<div class="menu-link-div yellow">
 			<div class="menu-link">
-				<a class="button button-pink" href="#">Menu</a>
+				<a class="button button-yellow" href="#">Menu</a>
 			</div>
 		</div>
 	</body>
