--- a/new-site/shapeways/index.html
+++ b/new-site/shapeways/index.html
@@ -12,27 +12,28 @@
 	</head>
 	<body>
 		<!-- Header -->
-		<div class="header background pink">
-			<div class="blurb">
-				<h1> In Summer 2015, I worked at Shapeways.</h1>
+		<div class="header background blue">
+			<div class="title">
+				<h1> In Summer 2015, I worked at Shapeways</h1>
+				<p> A Manhattan-based 3D printing service & marketplace </p>
 			</div>
 		</div>
 		<!-- Paragraph -->
 		<div class="background gray">
 			<div class="container with-padding">
 				<p>
-					During the summer of 2015 I had the opportunity to intern at Shapeways, the New York based 3D printing service and marketplace, on their front-end engineering team. During my time there, I built features in the order / purchase experience, and worked on a mobile responsive redesign of the checkout experience. In addition, I participated in several front-end architecture refactor projects and contributed to Shapeways tech documentation. You can read more about the architecture initiatives I helped implement in my Medium post 
-					<a href="#">here</a>. 
+					I was a member of <a href="http://shapeways.com" target="_blank">Shapeways</a>'s front-end engineering team. During my time there, I built features in the order / purchase experience, and worked on a mobile responsive redesign of the checkout experience. In addition, I participated in several front-end architecture refactor projects and contributed to Shapeways tech documentation. You can read more about the architecture initiatives I helped implement in my Medium post 
+					<a href="https://medium.com/shapeways-tech/automating-discipline-3795de2df78b" target="_blank">here</a>. 
 				</p>
 				<p>
-					Although I was primarily a member of the front-end engineering team, I also worked closely with the UX team and was lucky enough to be able to participate in the design process of every feature I implemented. My time at Shapeways was a great opportunity to learn and grow in a variety of areas, and to try new things. I was also able to pick up and implement side projects, and work on them end-to-end. Below is one such solo project, a redesign of Shapeways’s “My Orders” page.
+					I also worked closely with the UX team and was lucky enough to be able to participate in the design process of every feature I implemented. My time at Shapeways was a great opportunity to learn and grow in a variety of areas, and to try new things. I was also able to pick up and implement side projects, and work on them end-to-end. One such project, chronicled below, was a redesign of the order history page.
 				</p>
 			</div>
 		</div>
 		<!-- Primary Content -->
 		<div class="background white">
-			<div class="container">
-				<div class="clearfix">&nbsp;</div>
+			<div class="container padding-top">
+				<img src="images/title.png">
 				<h1>Redesigning "My Orders"</h1>
 
 				<p>
@@ -124,22 +125,46 @@
 			<div class="image-container">
 						<img class="half-size" src="images/final_phone.png">
 			</div>
-			<div class="container">
+			<div class="container padding-bottom">
 				<p>
 					My second design solidified and emphasized important information and actionable items for marketplace shoppers, while still keeping information and actions for makers and business owners easily accessible and navigable. It also clarified visual structure by arranging orders into modules, rather than visually confusing table rows and columns. 
 				</p>
-				<div class="clearfix">&nbsp;</div>
 			</div>
 		</div>
 		<!-- Footer -->
 		<div class="background gray footer">
-			<div class="container">
+			<div class="footer">
+				<a href="#">
+					<img class="social-media" src="../footer/dribbble.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/github.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/behance.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/linkedin.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/medium.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/instagram.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="../footer/email.png">
+				</a>
+				<div class="content">
+					Found a bug? <a href="#">Call the exterminator</a>
+				</div>
 			</div>
+
 		</div>
 		<!-- Menu Link -->
-		<div class="menu-link-div pink">
+		<div class="menu-link-div blue">
 			<div class="menu-link">
-				<a class="button button-pink" href="#">Menu</a>
+				<a class="button button-blue" href="#">Menu</a>
 			</div>
 		</div>
 	</body>
