--- a/new-site/index.html
+++ b/new-site/index.html
@@ -13,19 +13,21 @@
 	<body>
 		<!-- Intro -->
 		<div class="background intro pink">
-			<div class="blurb">
+			<img class="castle" src="images/castle.png">
+		</div>
+		<div class="background gray">
+			<div class="container with-padding">
 				<h1>Hi, My name is Angira!</h1>
 				<p>
-					I'm a UC Berkeley Junior studying Computer Science and Design. I like bright colors, conquering bugs, and listening to audiobooks.
-					<br>Scroll down to see some of my work!
+					I'm a designer, developer, and illustrator studying computer science at UC Berkeley. I like bright colors, conquering bugs, and listening to audiobooks.
 				</p>
 
 				<p>
 					<span class="button-span">
-						<a class="button button-pink" href="#">More About Me</a>
+						<a class="button button-gray" href="/about">More About Me</a>
 					</span>
 					<span class="button-span">
-						<a class="button button-pink" href="#">Get In Touch</a>
+						<a class="button button-gray" href="#">Get In Touch</a>
 					</span>
 				</p>
 			</div>
@@ -37,15 +39,13 @@
 				<div class="content first-item">
 					<!-- Image -->
 					<div class="photo shapeways">
-						<div class="overlay yellow">
-							&nbsp;
-						</div>
+						&nbsp;
 					</div>
 					<!-- Title -->
 					<h1>Shapeways</h1>
 					<h4>UI / Front-end Engineering Intern</h4>
 					<p>
-						<a href="#">Photo</a> booth authentic cornhole, typewriter viral direct trade Marfa pop-up cred cronut cliche literally. Health goth tilde slow-carb messenger bag. Lo-fi kogi dreamcatcher, squid post-ironic pickled stumptown. Biodiesel disrupt wayfarers skateboard Banksy keytar.
+						I designed and built user-facing features in the order / purchase experience of a Manhattan based 3D printing service and marketplace. I also worked on several front-end architecture refactor projects and contributed to Shapeways tech documentation. You can read my Medium post on my time at Shapeways <a href="#">here</a>.
 					</p>
 					<p>
 						<strong>Time Period:</strong> Summer 2015
@@ -59,18 +59,16 @@
 
 				</div>
 				<!-- WONDER -->
-				<div class="content">
+				<div class="content extra-padding">
 					<!-- Image -->
 					<div class="photo wonder">
-						<div class="overlay light-yellow">
-							&nbsp;
-						</div>
+						&nbsp;
 					</div>
 					<!-- Title -->
 					<h1>The Wonder Foundation</h1>
 					<h4>Branding & Visual Design</h4>
 					<p>
-						PBR yr Helvetica raw denim. Taxidermy brunch gentrify meh banh mi, chia drinking vinegar kitsch Helvetica gluten-free normcore pug. Pop-up Austin butcher squid, wolf slow-carb umami yr pickled crucifix.
+						During my semester abroad in London, I worked as the visual designer for a small charity focused on primary education and vocational training for underpriviledged women and children. While there, I worked on marketing campaigns and brand development.
 					</p>
 					<p>
 						<strong>Time Period:</strong> Spring 2015
@@ -83,18 +81,19 @@
 					</p>
 				</div>
 				<!-- InnoD -->
-				<div class="content">
+				<div class="content extra-padding">
 					<!-- Image -->
 					<div class="photo innod">
-						<div class="overlay light-blue">
-							&nbsp;
-						</div>
+						&nbsp;
 					</div>
 					<!-- Title -->
 					<h1>Innovative Design</h1>
 					<h4>Design Education & Outreach</h4>
 					<p>
-						Banh mi cred salvia taxidermy, retro church-key seitan deep v fixie keytar letterpress normcore ennui. Jean shorts Brooklyn quinoa food truck McSweeney's, Kickstarter 8-bit readymade twee fingerstache Truffaut narwhal. Tilde kitsch sriracha cred, semiotics crucifix scenester Marfa lo-fi street art Carles pickled.
+						Innovative Design is UC Berkeley's premier graphic design and photography collective. As a member of the Innovative Design officer board, I have mentored teams of intermediate to advanced graphic designers in a variety of pro bono marketing and branding projects, and organized several on-campus design education and outreach events. 
+					</p>
+					<p>
+						As of fall 2015, I am also serving as an instructor for Innovative Design's Introduction to Photoshop & Illustrator Course, teaching a class of 20-30 students the basics of design and the Adobe Creative Suite.
 					</p>
 					<p>
 						<strong>Time Period:</strong> Fall 2013 - Present
@@ -106,18 +105,16 @@
 						</span>
 					</p>
 				</div>
-				<div class="content">
+				<div class="content extra-padding">
 					<!-- Image -->
 					<div class="photo other">
-						<div class="overlay blue">
-							&nbsp;
-						</div>
+						&nbsp;
 					</div>
 					<!-- Title -->
 					<h1>Other Projects</h1>
 					<h4>Freelance & Personal Work</h4>
 					<p>
-						Drinking vinegar keffiyeh yr put a bird on it try-hard lomo, actually YOLO shabby chic. Mlkshk Brooklyn plaid tote bag, food truck stumptown tousled drinking vinegar selfies before they sold out heirloom kitsch. Roof party bespoke vegan, 8-bit cray wolf church-key. Typewriter semiotics literally taxidermy, aesthetic meggings PBR&B Blue Bottle.
+						In my spare time, I like to paint, draw, illustrate, and make things out of clock parts. I also like to play around with web development. Please don't hesitate to <a href="#">contact me</a> about commissioning an illustration or sculpture!
 					</p>
 					<p>
 						<strong>Time Period:</strong> Fall 2013 - Present
@@ -129,12 +126,35 @@
 						</span>
 					</p>
 				</div>
-				<div class="clearfix">&nbsp;</div>
 			</div>
 		</div>
 		<!-- Footer -->
-		<div class="background gray footer">
-			<div class="container">
+		<div class="background gray">
+			<div class="footer">
+				<a href="#">
+					<img class="social-media" src="footer/dribbble.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="footer/github.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="footer/behance.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="footer/linkedin.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="footer/medium.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="footer/instagram.png">
+				</a>
+				<a href="#">
+					<img class="social-media" src="footer/email.png">
+				</a>
+				<div class="content">
+					Found a bug? <a href="#">Call the exterminator</a>
+				</div>
 			</div>
 		</div>
 		<!-- Menu Link-->
