adding innod and wonder

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -132,25 +132,25 @@
 		<div class="background gray">
 			<div class="footer">
 				<a href="#">
-					<img class="social-media" src="footer/dribbble.png">
+					<img class="social" src="footer/dribbble.png">
 				</a>
 				<a href="#">
-					<img class="social-media" src="footer/github.png">
+					<img class="social" src="footer/github.png">
 				</a>
 				<a href="#">
-					<img class="social-media" src="footer/behance.png">
+					<img class="social" src="footer/behance.png">
 				</a>
 				<a href="#">
-					<img class="social-media" src="footer/linkedin.png">
+					<img class="social" src="footer/linkedin.png">
 				</a>
 				<a href="#">
-					<img class="social-media" src="footer/medium.png">
+					<img class="social" src="footer/medium.png">
 				</a>
 				<a href="#">
-					<img class="social-media" src="footer/instagram.png">
+					<img class="social" src="footer/instagram.png">
 				</a>
 				<a href="#">
-					<img class="social-media" src="footer/email.png">
+					<img class="social" src="footer/email.png">
 				</a>
 				<div class="content">
 					Found a bug? <a href="#">Call the exterminator</a>
