adding innod and wonder

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -141,7 +141,7 @@
 					<img class="social" src="footer/behance.png">
 				</a>
 				<a href="#">
-					<img class="social" src="footer/linkedin.png">
+					<img class="social" src="footer/in.png">
 				</a>
 				<a href="#">
 					<img class="social" src="footer/medium.png">
