working working working

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -15,6 +15,7 @@
 		<div class="background intro pink">
 			<img class="castle" src="images/castle.png">
 		</div>
+		<div class="waypoint-pink"></div>
 		<div class="background gray">
 			<div class="container with-padding">
 				<h1>Hi, My name is Angira!</h1>
@@ -27,11 +28,12 @@
 						<a class="button button-gray" href="about/">More About Me</a>
 					</span>
 					<span class="button-span">
-						<a class="button button-gray" href="#">Get In Touch</a>
+						<a class="button button-gray" href="mailto:ashirahattia@gmail.com">Get In Touch</a>
 					</span>
 				</p>
 			</div>
 		</div>
+		<div class="waypoint-gray"></div>
 		<!-- Body -->
 		<div class="background white">
 			<div class="container">
@@ -53,7 +55,7 @@
 					</p>
 					<p>
 						<span class="button-span">
-							<a class="button" href="#">Learn More</a>
+							<a class="button" href="shapeways/">Learn More</a>
 						</span>
 					</p>
 
@@ -76,7 +78,7 @@
 					</p>
 					<p>
 						<span class="button-span">
-							<a class="button" href="#">Learn More</a>
+							<a class="button" href="wonder/">Learn More</a>
 						</span>
 					</p>
 				</div>
@@ -93,7 +95,7 @@
 						Innovative Design is UC Berkeley's premier graphic design and photography collective. As a member of the Innovative Design officer board, I have mentored teams of intermediate to advanced graphic designers in a variety of pro bono marketing and branding projects, and organized several on-campus design education and outreach events. 
 					</p>
 					<p>
-						As of fall 2015, I am also serving as an instructor for Innovative Design's Introduction to Photoshop & Illustrator Course, teaching a class of 20-30 students the basics of design and the Adobe Creative Suite.
+						As of fall 2015, I am also serving as an instructor for Innovative Design's Introduction to Photoshop & Illustrator course, teaching a class of 20-30 students the basics of design and the Adobe Creative Suite.
 					</p>
 					<p>
 						<strong>Time Period:</strong> Fall 2013 - Present
@@ -101,7 +103,7 @@
 					</p>
 					<p>
 						<span class="button-span">
-							<a class="button" href="#">Learn More</a>
+							<a class="button" href="innod/">Learn More</a>
 						</span>
 					</p>
 				</div>
@@ -122,7 +124,7 @@
 					</p>
 					<p>
 						<span class="button-span">
-							<a class="button" href="#">Learn More</a>
+							<a class="button" href="other/">Learn More</a>
 						</span>
 					</p>
 				</div>
@@ -131,25 +133,25 @@
 		<!-- Footer -->
 		<div class="background gray">
 			<div class="footer">
-				<a href="#">
+				<a href="https://dribbble.com/ashirahattia" target="_blank">
 					<img class="social" src="footer/dribbble.png">
 				</a>
-				<a href="#">
+				<a href="https://github.com/ashirahattia" target="_blank">
 					<img class="social" src="footer/github.png">
 				</a>
-				<a href="#">
+				<a href="https://www.behance.net/ashirahattia" target="_blank">
 					<img class="social" src="footer/behance.png">
 				</a>
-				<a href="#">
+				<a href="https://www.linkedin.com/in/ashirahatti" target="_blank">
 					<img class="social" src="footer/in.png">
 				</a>
-				<a href="#">
+				<a href="https://medium.com/@ashirahatti" target="_blank">
 					<img class="social" src="footer/medium.png">
 				</a>
-				<a href="#">
+				<a href="https://instagram.com/ashirahattia/" target="_blank">
 					<img class="social" src="footer/instagram.png">
 				</a>
-				<a href="#">
+				<a href="mailto:ashirahattia@gmail.com" target="_blank">
 					<img class="social" src="footer/email.png">
 				</a>
 				<div class="content">
@@ -160,8 +162,25 @@
 		<!-- Menu Link-->
 		<div class="menu-link-div pink">
 			<div class="menu-link">
-				<a class="button button-pink" href="#">Menu</a>
+				<a class="button button-pink" href="#menu">Menu</a>
 			</div>
 		</div>
+		<div id="menu" class="pink">
+			<div class="menu-items">
+				<a class="menu-item" href="index.html">Home</a>
+				<br><a class="menu-item" href="about/">About</a>
+				<br>
+				<br><a class="menu-item" href="shapeways/">Shapeways</a>
+				<br><a class="menu-item" href="wonder/">The WONDER Foundation</a>
+				<br><a class="menu-item" href="innod/">Innovative Design</a>
+				<br><a class="menu-item" href="other/">Other Projects</a>
+			</div>
+		</div>
+
+		<!-- JQuery -->
+		<script src="js/jquery-1.11.2.min.js"></script>
+        <script src="js/jquery.waypoints.min.js"></script>
+        <script src="js/waypoints.js"></script>
+        <script src="js/menu.js"></script>
 	</body>
 </html>
