--- a/new-site/innod/index.html
+++ b/new-site/innod/index.html
@@ -61,26 +61,26 @@
 		<!-- Footer -->
 		<div class="background gray footer">
 			<div class="footer">
-				<a href="#">
-					<img class="social-media" src="../footer/dribbble.png">
+				<a href="https://dribbble.com/ashirahattia" target="_blank">
+					<img class="social" src="../footer/dribbble.png">
 				</a>
-				<a href="#">
-					<img class="social-media" src="../footer/github.png">
+				<a href="https://github.com/ashirahattia" target="_blank">
+					<img class="social" src="../footer/github.png">
 				</a>
-				<a href="#">
-					<img class="social-media" src="../footer/behance.png">
+				<a href="https://www.behance.net/ashirahattia" target="_blank">
+					<img class="social" src="../footer/behance.png">
 				</a>
-				<a href="#">
-					<img class="social-media" src="../footer/linkedin.png">
+				<a href="https://www.linkedin.com/in/ashirahatti" target="_blank">
+					<img class="social" src="../footer/in.png">
 				</a>
-				<a href="#">
-					<img class="social-media" src="../footer/medium.png">
+				<a href="https://medium.com/@ashirahatti" target="_blank">
+					<img class="social" src="../footer/medium.png">
 				</a>
-				<a href="#">
-					<img class="social-media" src="../footer/instagram.png">
+				<a href="https://instagram.com/ashirahattia/" target="_blank">
+					<img class="social" src="../footer/instagram.png">
 				</a>
-				<a href="#">
-					<img class="social-media" src="../footer/email.png">
+				<a href="mailto:ashirahattia@gmail.com" target="_blank">
+					<img class="social" src="../footer/email.png">
 				</a>
 				<div class="content">
 					Found a bug? <a href="#">Call the exterminator</a>
