working working working

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<!-- Intro -->
-		<div class="background intro pink">
+		<div class="intro background pink">
 			<img class="castle" src="images/castle.png">
 		</div>
 		<div class="waypoint-pink"></div>
@@ -38,7 +38,7 @@
 		<div class="background white">
 			<div class="container">
 				<!-- Shapeways -->
-				<div class="content first-item">
+				<div class="content first-item extra-padding">
 					<!-- Image -->
 					<div class="photo shapeways">
 						&nbsp;
@@ -160,9 +160,12 @@
 			</div>
 		</div>
 		<!-- Menu Link-->
-		<div class="menu-link-div pink">
-			<div class="menu-link">
+		<div id="menu-link-div" class="pink">
+			<div class="menu-link desktop">
 				<a class="button button-pink" href="#menu">Menu</a>
+			</div>
+			<div class="menu-link mobile">
+				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
 		</div>
 		<div id="menu" class="pink">
