--- a/new-site/shapeways/index.html
+++ b/new-site/shapeways/index.html
@@ -18,6 +18,7 @@
 				<p> A Manhattan-based 3D printing service & marketplace </p>
 			</div>
 		</div>
+		<div class="waypoint-blue"></div>
 		<!-- Paragraph -->
 		<div class="background gray">
 			<div class="container with-padding">
@@ -30,6 +31,7 @@
 				</p>
 			</div>
 		</div>
+		<div class="waypoint-gray"></div>
 		<!-- Primary Content -->
 		<div class="background white">
 			<div class="container padding-top">
@@ -162,10 +164,18 @@
 
 		</div>
 		<!-- Menu Link -->
-		<div class="menu-link-div blue">
-			<div class="menu-link">
-				<a class="button button-blue" href="#">Menu</a>
+		<div id="menu-link-div" class="blue">
+			<div class="menu-link desktop">
+				<a class="button button-blue" href="#menu">Menu</a>
+			</div>
+			<div class="menu-link mobile">
+				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
 		</div>
+		<!-- JQuery -->
+		<script src="../js/jquery-1.11.2.min.js"></script>
+        <script src="../js/jquery.waypoints.min.js"></script>
+        <script src="../js/waypoints.js"></script>
+        <script src="../js/menu.js"></script>
 	</body>
 </html>
