--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -41,10 +41,10 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="clearfix">&nbsp;</div>
+		<div class="waypoint-yellow"></div>
 		<!-- Paragraph -->
 		<div class="background gray">
-			<div class="clearfix">&nbsp;</div>
 			<div class="container with-padding">
 				<p>
 					I love interfaces that bring joy as well as functionality to people’s lives. I have an endless passion for all things beautiful and user friendly, and want to build products that make the world more magical. 
@@ -63,6 +63,7 @@
 				</p>
 			</div>
 		</div>
+		<div class="waypoint-gray"></div>
 		<!-- Resume -->
 		<div class="background white">
 			<div class="container">
@@ -180,10 +181,19 @@
 
 		</div>
 		<!-- Menu Link -->
-		<div class="menu-link-div yellow">
-			<div class="menu-link">
-				<a class="button button-yellow" href="#">Menu</a>
+		<div id="menu-link-div" class="yellow">
+			<div class="menu-link desktop">
+				<a class="button button-yellow" href="#menu">Menu</a>
+			</div>
+			<div class="menu-link mobile">
+				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
 		</div>
+
+		<!-- JQuery -->
+		<script src="../js/jquery-1.11.2.min.js"></script>
+        <script src="../js/jquery.waypoints.min.js"></script>
+        <script src="../js/waypoints.js"></script>
+        <script src="../js/menu.js"></script>
 	</body>
 </html>
