working working working

--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -159,9 +159,7 @@
 				<a href="https://github.com/ashirahattia" target="_blank">
 					<img class="social" src="../footer/github.png">
 				</a>
-				<a href="https://www.behance.net/ashirahattia" target="_blank">
-					<img class="social" src="../footer/behance.png">
-				</a>
+
 				<a href="https://www.linkedin.com/in/ashirahatti" target="_blank">
 					<img class="social" src="../footer/in.png">
 				</a>
@@ -187,6 +185,18 @@
 			</div>
 			<div class="menu-link mobile">
 				<a class="menu-icon" href="#menu">&#9776;</a>
+			</div>
+		</div>
+		<div id="menu" class="yellow">
+			<div class="menu-items">
+				<a class="menu-item" href="../index.html">Home</a>
+				<br><a class="menu-item" href="about/">About</a>
+				<br>
+				<br><a class="menu-item" href="../shapeways/">Shapeways</a>
+				<br><a class="menu-item" href="../wonder/">The WONDER Foundation</a>
+				<br><a class="menu-item" href="../innod/">Innovative Design</a>
+				<br><a class="menu-item" href="https://www.behance.net/ashirahattia" target="_blank">Other Projects on Behance</a>
+				<br><a class="menu-item" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Sketchbook on Tumblr</a>
 			</div>
 		</div>
 
