--- a/new-site/index.html
+++ b/new-site/index.html
@@ -109,6 +109,27 @@
 				</div>
 				<div class="content extra-padding">
 					<!-- Image -->
+					<div class="photo lily-livered">
+						&nbsp;
+					</div>
+					<!-- Title -->
+					<h1>Lily-Livered</h1>
+					<h4>A Shakespearean Insult Generator</h4>
+					<p>
+						A small personal project to help familiarize myself with backbone. Because sometimes, "well, you're stupid!" just isn't enough.
+					</p>
+					<p>
+						<strong>Time Period:</strong> Fall 2014
+						<br><strong>Tools I used:</strong> Python, Javascript, Backbone, HTML/CSS
+					</p>
+					<p>
+						<span class="button-span">
+							<a class="button" href="lily-livered/">View Demo</a>
+						</span>
+					</p>
+				</div>
+				<div class="content extra-padding">
+					<!-- Image -->
 					<div class="photo other">
 						&nbsp;
 					</div>
@@ -116,15 +137,18 @@
 					<h1>Other Projects</h1>
 					<h4>Freelance & Personal Work</h4>
 					<p>
-						In my spare time, I like to paint, draw, illustrate, and make things out of clock parts. I also like to play around with web development. Please don't hesitate to <a href="#">contact me</a> about commissioning an illustration or sculpture!
+						In my spare time, I like to paint, draw, illustrate, and make things out of clock parts. Please don't hesitate to <a href="#">contact me</a> about commissioning an illustration or sculpture!
 					</p>
 					<p>
 						<strong>Time Period:</strong> Fall 2013 - Present
-						<br><strong>Tools I used:</strong> Python, Javascript, HTML/CSS, Illustrator, Pencil, Clock Parts
+						<br><strong>Tools I used:</strong> Illustrator, Pencil, Clock Parts
 					</p>
 					<p>
 						<span class="button-span">
-							<a class="button" href="other/">Learn More</a>
+							<a class="button" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Tumblr Sketchbook</a>
+						</span>
+						<span class="button-span">
+							<a class="button" href="https://www.behance.net/ashirahattia" target="_blank">Projects on Behance</a>
 						</span>
 					</p>
 				</div>
@@ -138,9 +162,6 @@
 				</a>
 				<a href="https://github.com/ashirahattia" target="_blank">
 					<img class="social" src="footer/github.png">
-				</a>
-				<a href="https://www.behance.net/ashirahattia" target="_blank">
-					<img class="social" src="footer/behance.png">
 				</a>
 				<a href="https://www.linkedin.com/in/ashirahatti" target="_blank">
 					<img class="social" src="footer/in.png">
@@ -176,7 +197,8 @@
 				<br><a class="menu-item" href="shapeways/">Shapeways</a>
 				<br><a class="menu-item" href="wonder/">The WONDER Foundation</a>
 				<br><a class="menu-item" href="innod/">Innovative Design</a>
-				<br><a class="menu-item" href="other/">Other Projects</a>
+				<br><a class="menu-item" href="https://www.behance.net/ashirahattia" target="_blank">Other Projects on Behance</a>
+				<br><a class="menu-item" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Sketchbook on Tumblr</a>
 			</div>
 		</div>
 
