--- a/new-site/wonder/index.html
+++ b/new-site/wonder/index.html
@@ -130,9 +130,6 @@
 				<a href="https://github.com/ashirahattia" target="_blank">
 					<img class="social" src="../footer/github.png">
 				</a>
-				<a href="https://www.behance.net/ashirahattia" target="_blank">
-					<img class="social" src="../footer/behance.png">
-				</a>
 				<a href="https://www.linkedin.com/in/ashirahatti" target="_blank">
 					<img class="social" src="../footer/in.png">
 				</a>
@@ -160,6 +157,19 @@
 				<a class="menu-icon" href="#menu">&#9776;</a>
 			</div>
 		</div>
+		<div id="menu" class="blue">
+			<div class="menu-items">
+				<a class="menu-item" href="../index.html">Home</a>
+				<br><a class="menu-item" href="about/">About</a>
+				<br>
+				<br><a class="menu-item" href="../shapeways/">Shapeways</a>
+				<br><a class="menu-item" href="../wonder/">The WONDER Foundation</a>
+				<br><a class="menu-item" href="../innod/">Innovative Design</a>
+				<br><a class="menu-item" href="https://www.behance.net/ashirahattia" target="_blank">Other Projects on Behance</a>
+				<br><a class="menu-item" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Sketchbook on Tumblr</a>
+			</div>
+		</div>
+		
 		<!-- JQuery -->
 		<script src="../js/jquery-1.11.2.min.js"></script>
         <script src="../js/jquery.waypoints.min.js"></script>
