working working working

--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -71,7 +71,7 @@
 				<!-- Education -->
 				<div class="content">
 					<span class="button-span">
-						<a class="button button-gray" href="resume.pdf">Resume PDF</a>
+						<a class="button button-gray" href="print-resume.pdf">Resume PDF</a>
 					</span>
 					<h1> Education </h1>
 
@@ -205,6 +205,6 @@
         <script src="../js/jquery.waypoints.min.js"></script>
         <script src="../js/waypoints.js"></script>
         <script src="../js/menu.js"></script>
-        
+
 	</body>
 </html>
