--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -71,7 +71,7 @@
 				<!-- Education -->
 				<div class="content">
 					<span class="button-span">
-						<a class="button button-gray" href="print-resume.pdf">Resume PDF</a>
+						<a class="button button-gray" href="print- qresume.pdf">Resume PDF</a>
 					</span>
 					<h1> Education </h1>
 
@@ -144,7 +144,7 @@
 				<div class="box-content text-left">
 					<h2>Coursework</h2>
 					<p>
-						<strong>Currently Taking</strong>: User Interface Design (Android), Internet Architecture & Protocols
+						<strong>Currently Taking</strong>: User Interface Design (Android), Internet Architecture & Protocols (Python)
 						<br><strong>Completed</strong>: Introduction to Computer Systems (Python), Datastructures (Java), Computer Architecture (C, MIPS), Discrete Mathematics & Probability Theory
 					</p>
 				</div>
@@ -195,6 +195,7 @@
 				<br><a class="menu-item" href="../shapeways/">Shapeways</a>
 				<br><a class="menu-item" href="../wonder/">The WONDER Foundation</a>
 				<br><a class="menu-item" href="../innod/">Innovative Design</a>
+				<br>
 				<br><a class="menu-item" href="https://www.behance.net/ashirahattia" target="_blank">Other Projects on Behance</a>
 				<br><a class="menu-item" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Sketchbook on Tumblr</a>
 			</div>
