--- a/new-site/index.html
+++ b/new-site/index.html
@@ -92,7 +92,7 @@
 					<h1>Innovative Design</h1>
 					<h4>Design Education & Outreach</h4>
 					<p>
-						Innovative Design is UC Berkeley's premier graphic design and photography collective. As a member of the Innovative Design officer board, I have mentored teams of intermediate to advanced graphic designers in a variety of pro bono marketing and branding projects, and organized several on-campus design education and outreach events. 
+						Innovative Design is UC Berkeley's premier creative agency. As a member of the Innovative Design officer board, I have mentored teams of intermediate to advanced graphic designers in a variety of pro bono marketing and branding projects, and organized several on-campus design education and outreach events. 
 					</p>
 					<p>
 						As of fall 2015, I am also serving as an instructor for Innovative Design's Introduction to Photoshop & Illustrator course, teaching a class of 20-30 students the basics of design and the Adobe Creative Suite.
@@ -145,7 +145,7 @@
 					</p>
 					<p>
 						<span class="button-span">
-							<a class="button" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Tumblr Sketchbook</a>
+							<a class="button" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Sketchbook on Tumblr</a>
 						</span>
 						<span class="button-span">
 							<a class="button" href="https://www.behance.net/ashirahattia" target="_blank">Projects on Behance</a>
@@ -197,6 +197,7 @@
 				<br><a class="menu-item" href="shapeways/">Shapeways</a>
 				<br><a class="menu-item" href="wonder/">The WONDER Foundation</a>
 				<br><a class="menu-item" href="innod/">Innovative Design</a>
+				<br>
 				<br><a class="menu-item" href="https://www.behance.net/ashirahattia" target="_blank">Other Projects on Behance</a>
 				<br><a class="menu-item" href="http://ashirahattia.tumblr.com/tagged/sketchbook/" target="_blank">Sketchbook on Tumblr</a>
 			</div>
