fixed resume link problem

--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -71,7 +71,7 @@
 				<!-- Education -->
 				<div class="content">
 					<span class="button-span">
-						<a class="button button-gray" href="print- qresume.pdf">Resume PDF</a>
+						<a class="button button-gray" href="resume.pdf">Resume PDF</a>
 					</span>
 					<h1> Education </h1>
 
