fixed empty links

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -137,7 +137,7 @@
 					<h1>Other Projects</h1>
 					<h4>Freelance & Personal Work</h4>
 					<p>
-						In my spare time, I like to paint, draw, illustrate, and make things out of clock parts. Please don't hesitate to <a href="#">contact me</a> about commissioning an illustration or sculpture!
+						In my spare time, I like to paint, draw, illustrate, and make things out of clock parts. Please don't hesitate to <a href="mailto:ashirahattia@gmail.com">contact me</a> about commissioning an illustration or sculpture!
 					</p>
 					<p>
 						<strong>Time Period:</strong> Fall 2013 - Present
@@ -176,7 +176,7 @@
 					<img class="social" src="footer/email.png">
 				</a>
 				<div class="content">
-					Found a bug? <a href="#">Call the exterminator</a>
+					Found a bug? <a href="mailto:ashirahattia@gmail.com?subject=Bug Report">Call the exterminator</a>
 				</div>
 			</div>
 		</div>
