--- a/new-site/wonder/index.html
+++ b/new-site/wonder/index.html
@@ -143,7 +143,7 @@
 					<img class="social" src="../footer/email.png">
 				</a>
 				<div class="content">
-					Found a bug? <a href="#">Call the exterminator</a>
+					Found a bug? <a href="mailto:ashirahattia@gmail.com?subject=Bug Report">Call the exterminator</a>
 				</div>
 			</div>
 
